# pygebraic

./: .gitignore  Dockerfile  pyproject.toml  readme.md  regular_expressions.txt  run
base/: base.py  monomial.py  polynomial.py
code/: monomy.py
code/base/: base.py
code/basic_algebraic_elements/: basic_algebraic_elements.py
code/basic_operations/: sum.py
test/: test_monomy.py
test/basic_algebraic_elements/: test_basic_algebraic_elements.py
test/basic_operations/: test_sum.py
tests/: test_monomial.py  test_monomy.py  test_polynomial.py
