[tool.poetry]
name = "algebra-with-python"
version = "0.1.0"
description = "A utility to compute algebraic expressions"
authors = ["cesarmg1980 <cesar.m.giulietti@outlook.com>"]
license = "free"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
mypy = "^0.990"
black = "^22.12.0"
isort = "^5.11.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
